--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/vscode,node,macos,git,windows,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode,node,macos,git,windows,dotenv
 
+/config
+
 ### dotenv ###
 .env
 
