--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
-    "promise-mysql": "^4.1.3"
+    "promise-mysql": "^4.1.3",
+    "swagger-jsdoc": "^5.0.1",
+    "swagger-ui-express": "^4.1.5"
   }
 }
