--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.6",
     "promise-mysql": "^4.1.3",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.5"
+    "swagger-ui-express": "^4.1.5",
+    "yamljs": "^0.3.0"
   }
 }
