--- a/src/swagger/paths/promise.yaml
+++ b/src/swagger/paths/promise.yaml
@@ -18,3 +18,11 @@ get:
                 type: array
                   items:
                   $ref: "../openapi.yaml#/components/schemas/Promise"
+    400:
+      $ref: "../openapi.yaml#/components/responses/BadRequest"
+    600:
+      $ref: "../openapi.yaml#/components/responses/DBError"
+    500:
+      $ref: "../openapi.yaml#/components/responses/InternalServerError"
+    default:
+      $ref: "../openapi.yaml#/components/responses/InternalServerError"
