feat: Modify build.yaml

--- a/src/swagger/paths/promise.yaml
+++ b/src/swagger/paths/promise.yaml
@@ -15,9 +15,7 @@ get:
               "message":
                 type: string
               "result":
-                type: array
-                  items:
-                  $ref: "../openapi.yaml#/components/schemas/Promise"
+                type: string
     400:
       $ref: "../openapi.yaml#/components/responses/BadRequest"
     600:
