--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "api-docs": "swagger-cli bundle src/swagger/openapi.yaml --outfile src/swagger/build.yaml --type yaml",
+    "prestart": "npm run api-docs",
     "start": "node ./bin/www",
+    "predev": "npm run api-docs",
     "dev": "NODE_ENV=development node ./bin/www",
     "prod": "NODE_ENV=production node ./bin/www"
   },
@@ -19,6 +22,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "promise-mysql": "^4.1.3",
+    "swagger-cli": "^4.0.4",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.5",
     "yamljs": "^0.3.0"
