--- a/src/swagger/paths/promise-list.yaml
+++ b/src/swagger/paths/promise-list.yaml
@@ -1,14 +1,8 @@
-post:
-  summary: Create promise
-  requestBody:
-    required: true
-    content:
-      application/json:
-        schema:
-          $ref: "../openapi.yaml#/components/schemas/Promise"
+get:
+  summary: Get all promises
   responses:
-    201:
-      description: Create Success
+    200:
+      description: OK
       content:
         application/json:
           schema:
@@ -20,6 +14,10 @@ post:
                 type: integer
               "message":
                 type: string
+              "result":
+                type: array
+                items:
+                  $ref: "../openapi.yaml#/components/schemas/Promise"
     400:
       $ref: "../openapi.yaml#/components/responses/BadRequest"
     600:
