--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "api-docs": "swagger-cli bundle src/swagger/openapi.yaml --outfile src/swagger/build.yaml --type yaml",
-    "prestart": "npm run api-docs",
     "start": "node ./bin/www",
-    "predev": "npm run api-docs",
     "dev": "NODE_ENV=development node ./bin/www",
     "prod": "NODE_ENV=production node ./bin/www"
   },
@@ -19,10 +17,13 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "promise-mysql": "^4.1.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "swagger-cli": "^4.0.4",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.5",
