--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -38,6 +38,78 @@ paths:
           $ref: '#/components/responses/DBError'
         default:
           $ref: '#/components/responses/InternalServerError'
+  /sign-up:
+    post:
+      summary: 회원가입 API
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                nickname:
+                  type: string
+              example:
+                email: larry@wooly.co.kr
+                password: 1111
+                nickname: 동동이
+      responses:
+        '200':
+          description: SIGN_UP_SUCCESS
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Auth'
+        '204':
+          description: EMPTY_BODY
+        '206':
+          description: INVALID_CONTENT
+        '500':
+          description: INTERNAL_SERVER_ERROR
+  /sign-in:
+    post:
+      summary: 로그인 API
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Promise'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+        '600':
+          $ref: '#/components/responses/DBError'
+        default:
+          $ref: '#/components/responses/InternalServerError'
 components:
   securitySchemes:
     BearerAuth:
@@ -65,6 +137,18 @@ components:
           type: string
         userIdx:
           type: integer
+    Auth:
+      type: object
+      required:
+        - token
+        - userIdx
+      properties:
+        token:
+          type: string
+          description: 토큰
+        userIdx:
+          type: integer
+          description: 유저 인덱스
     Error:
       type: object
       properties:
