--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -21,6 +22,9 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "promise-mysql": "^4.1.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
