--- a/src/swagger/paths/promise-list.yaml
+++ b/src/swagger/paths/promise-list.yaml
@@ -1,5 +1,11 @@
 get:
-  summary: Get all promises
+  summary: 다짐 목록 API
+  tags: [promise]
+  parameters:
+    - in: header
+      name: x-access-token
+      type: string
+      required: true
   responses:
     200:
       description: OK
@@ -18,11 +24,24 @@ get:
                 type: array
                 items:
                   $ref: "../openapi.yaml#/components/schemas/Promise"
+          example:
+            isSuccess: true
+            code: 200
+            message: 다짐 목록 조회
+            result:
+              - promiseIdx: 17
+                promise: "promise hihi"
+                createdAt: "2020-12-17T12:01:00.000Z"
+                public: "ok"
+                userIdx: 5
+              - promiseIdx: 18
+                promise: "hihi"
+                createdAt: "2020-12-17T12:02:22.000Z"
+                public: "ok"
+                userIdx: 5
     400:
       $ref: "../openapi.yaml#/components/responses/BadRequest"
     600:
       $ref: "../openapi.yaml#/components/responses/DBError"
     500:
-      $ref: "../openapi.yaml#/components/responses/InternalServerError"
-    default:
       $ref: "../openapi.yaml#/components/responses/InternalServerError"
