--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -14,11 +14,6 @@ paths:
       summary: 다짐 목록 API
       tags:
         - promise
-      parameters:
-        - in: header
-          name: x-access-token
-          type: string
-          required: true
       responses:
         '200':
           description: OK
@@ -41,6 +36,62 @@ paths:
                 isSuccess: true
                 code: 200
                 message: 다짐 목록 조회
+                result:
+                  - promiseIdx: 17
+                    promise: promise hihi
+                    createdAt: '2020-12-17T12:01:00.000Z'
+                    public: 화이팅
+                    userIdx: 5
+                  - promiseIdx: 18
+                    promise: 아자아자
+                    createdAt: '2020-12-20T12:02:22.000Z'
+                    public: ok
+                    userIdx: 5
+                  - promiseIdx: 19
+                    promise: 알찬 하루를 보내자
+                    createdAt: '2020-12-24T10:30:39.000Z'
+                    public: ok
+                    userIdx: 5
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+        '600':
+          $ref: '#/components/responses/DBError'
+  '/app/promise-list/{date}':
+    get:
+      summary: 날짜별 다짐 목록 API
+      tags:
+        - promise
+      parameters:
+        - in: path
+          name: date
+          required: true
+          schema:
+            type: string
+          description: 조회할 날짜
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Promise'
+              example:
+                isSuccess: true
+                code: 200
+                message: 날짜별 다짐 목록 조회
                 result:
                   - promiseIdx: 17
                     promise: promise hihi
