--- a/src/swagger/paths/_index.yaml
+++ b/src/swagger/paths/_index.yaml
@@ -1,5 +1,7 @@
 /app/promise-list:
   $ref: "./promise-list.yaml"
+/app/promise-list/{date}:
+  $ref: "./promise-list-date.yaml"
 /app/promise:
   $ref: "./promise.yaml"
 /sign-up:
