--- a/src/swagger/paths/promise-list-date.yaml
+++ b/src/swagger/paths/promise-list-date.yaml
@@ -1,6 +1,13 @@
 get:
-  summary: 다짐 목록 API
+  summary: 날짜별 다짐 목록 API
   tags: [promise]
+  parameters:
+    - in: path
+      name: date
+      required: true
+      schema:
+        type: string
+      description: 조회할 날짜
   responses:
     200:
       description: OK
@@ -22,21 +29,16 @@ get:
           example:
             isSuccess: true
             code: 200
-            message: 다짐 목록 조회
+            message: 날짜별 다짐 목록 조회
             result:
               - promiseIdx: 17
                 promise: "promise hihi"
                 createdAt: "2020-12-17T12:01:00.000Z"
-                public: "화이팅"
-                userIdx: 5
-              - promiseIdx: 18
-                promise: "아자아자"
-                createdAt: "2020-12-20T12:02:22.000Z"
                 public: "ok"
                 userIdx: 5
-              - promiseIdx: 19
-                promise: "알찬 하루를 보내자"
-                createdAt: "2020-12-24T10:30:39.000Z"
+              - promiseIdx: 18
+                promise: "hihi"
+                createdAt: "2020-12-17T12:02:22.000Z"
                 public: "ok"
                 userIdx: 5
     400:
