--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -58,7 +58,7 @@ paths:
           $ref: '#/components/responses/InternalServerError'
         '600':
           $ref: '#/components/responses/DBError'
-  '/app/promise-list/{date}':
+  '/app/promise-list/{date}/{page}':
     get:
       summary: 날짜별 다짐 목록 API
       tags:
@@ -70,6 +70,12 @@ paths:
           schema:
             type: string
           description: 조회할 날짜
+        - in: path
+          name: page
+          required: true
+          schema:
+            type: integer
+          description: '페이징 인덱스(0일 경우, 전체 목록 조회)'
       responses:
         '200':
           description: OK
@@ -91,7 +97,7 @@ paths:
               example:
                 isSuccess: true
                 code: 200
-                message: 날짜별 다짐 목록 조회
+                message: 날짜별 다짐 목록 전체 조회
                 result:
                   - promiseIdx: 17
                     promise: promise hihi
