--- a/src/swagger/paths/promise-list-date-page.yaml
+++ b/src/swagger/paths/promise-list-date-page.yaml
@@ -8,6 +8,12 @@ get:
       schema:
         type: string
       description: 조회할 날짜
+    - in: path
+      name: page
+      required: true
+      schema:
+        type: integer
+      description: 페이징 인덱스(0일 경우, 전체 목록 조회)
   responses:
     200:
       description: OK
@@ -29,7 +35,7 @@ get:
           example:
             isSuccess: true
             code: 200
-            message: 날짜별 다짐 목록 조회
+            message: 날짜별 다짐 목록 전체 조회
             result:
               - promiseIdx: 17
                 promise: "promise hihi"
