--- a/src/swagger/paths/promise-list-date-page.yaml
+++ b/src/swagger/paths/promise-list-date-page.yaml
@@ -12,7 +12,7 @@ get:
       name: page
       required: true
       schema:
-        type: integer
+        type: string
       description: 페이징 인덱스(0일 경우, 전체 목록 조회)
   responses:
     200:
