--- a/src/swagger/paths/promise-list.yaml
+++ b/src/swagger/paths/promise-list.yaml
@@ -1,6 +1,21 @@
 get:
   summary: 다짐 목록 API
   tags: [promise]
+  parameters:
+    - in: query
+      name: date
+      required: false
+      schema:
+        type: string
+        example: "2020-12-17"
+      description: 조회할 날짜(입력하지 않을 경우, 전체 목록 조회)
+    - in: query
+      name: page
+      required: false
+      schema:
+        type: integer
+        example: 1
+      description: 페이징 인덱스(0이거나 입력하지 않을 경우, 특정 날짜의 전체 목록 조회)
   responses:
     200:
       description: OK
