--- a/src/swagger/paths/signin.yaml
+++ b/src/swagger/paths/signin.yaml
@@ -32,5 +32,7 @@ post:
                 $ref: "../openapi.yaml#/components/schemas/Auth"
     204:
       $ref: "../openapi.yaml#/components/responses/EmptyValueError"
+    206:
+      $ref: "../openapi.yaml#/components/responses/InvalidValueError"
     500:
       $ref: "../openapi.yaml#/components/responses/InternalServerError"
