--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -52,21 +52,24 @@ paths:
                 code: 200
                 message: 다짐 목록 조회
                 result:
-                  - promiseIdx: 17
-                    promise: promise hihi
-                    createdAt: '2020-12-17T12:01:00.000Z'
-                    public: 화이팅
-                    userIdx: 5
-                  - promiseIdx: 18
+                  - profile: ''
+                    nickname: 래리
+                    promiseIdx: 5
+                    createdAt: '2020-11-26T03:15:30.000Z'
+                    promise: 힘찬 하루를 보내자
+                    public: 1
+                  - profile: ''
+                    nickname: 래리
+                    promiseIdx: 6
+                    createdAt: '2020-11-26T03:21:44.000Z'
                     promise: 아자아자
-                    createdAt: '2020-12-20T12:02:22.000Z'
-                    public: ok
-                    userIdx: 5
-                  - promiseIdx: 19
-                    promise: 알찬 하루를 보내자
-                    createdAt: '2020-12-24T10:30:39.000Z'
-                    public: ok
-                    userIdx: 5
+                    public: 0
+                  - profile: ''
+                    nickname: 래리
+                    promiseIdx: 7
+                    createdAt: '2020-11-26T04:08:49.000Z'
+                    promise: 오늘은 긍정적인 하루를 보내야지
+                    public: 1
         '400':
           $ref: '#/components/responses/BadRequest'
         '500':
