--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -52,19 +52,19 @@ paths:
                 code: 200
                 message: 다짐 목록 조회
                 result:
-                  - profile: ''
+                  - profile: 'https://wooly.s3.ap-northeast-2.amazonaws.com/wooly_mascot.png'
                     nickname: 래리
                     promiseIdx: 5
                     createdAt: '2020-11-26T03:15:30.000Z'
                     promise: 힘찬 하루를 보내자
                     public: 1
-                  - profile: ''
+                  - profile: 'https://wooly.s3.ap-northeast-2.amazonaws.com/wooly_mascot.png'
                     nickname: 래리
                     promiseIdx: 6
                     createdAt: '2020-11-26T03:21:44.000Z'
                     promise: 아자아자
                     public: 0
-                  - profile: ''
+                  - profile: 'https://wooly.s3.ap-northeast-2.amazonaws.com/wooly_mascot.png'
                     nickname: 래리
                     promiseIdx: 7
                     createdAt: '2020-11-26T04:08:49.000Z'
