--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -99,7 +99,7 @@ paths:
                   type: string
             example:
               promise: 오늘은 힘찬 하루를 보내야지
-              public: ok
+              public: 1
       responses:
         '201':
           description: Create Success
@@ -264,7 +264,7 @@ components:
         createdAt:
           type: string
         public:
-          type: string
+          type: boolean
         userIdx:
           type: integer
     Auth:
