feat: 프로필 사진 변경 API

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preprod": "npm run api-docs"
   },
   "dependencies": {
+    "aws-sdk": "^2.834.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
