프로필 이미지 변경 response 데이터 수정

--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -383,10 +383,13 @@ paths:
                     type: integer
                   message:
                     type: string
+                  result:
+                    type: data
               example:
                 isSuccess: true
                 code: 200
                 message: 프로필 사진 변경 성공
+                result: null
         '400':
           $ref: '#/components/responses/BadRequest'
         '500':
