--- a/src/swagger/build.yaml
+++ b/src/swagger/build.yaml
@@ -389,7 +389,8 @@ paths:
                 isSuccess: true
                 code: 200
                 message: 프로필 사진 변경 성공
-                result: null
+                result:
+                  profile: 'https://wooly.s3.ap-northeast-2.amazonaws.com/1616938781416.jpg'
         '400':
           $ref: '#/components/responses/BadRequest'
         '500':
