--- a/src/swagger/paths/editProfile.yaml
+++ b/src/swagger/paths/editProfile.yaml
@@ -32,6 +32,7 @@ put:
             code: 200
             message: 프로필 사진 변경 성공
             result:
+              profile: "https://wooly.s3.ap-northeast-2.amazonaws.com/1616938781416.jpg"
 
     400:
       $ref: "../openapi.yaml#/components/responses/BadRequest"
