--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
