--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "env": "0.0.2",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
